--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -749,11 +749,11 @@
 	"resource.status.deleted": "Supprimée",
 	"resource.status.error": "Erreur lors du traitement",
 	"resource.status.loading": "Statut de chargement…",
-	"resource.status.next": "Sera traité ensuite",
-	"resource.status.pending": "Sera traité après {{count}}  ressources",
+	"resource.status.next": "Sera traitée ensuite",
+	"resource.status.pending": "Sera traitée après {{count}}  ressources",
 	"resource.status.processed": "Traitement terminé",
 	"resource.status.processing": "Traitement en cours",
-	"resource.status.rank": "Rang :  {{rank}}",
+	"resource.status.rank": "Rang : {{rank}}",
 	"resource.status.starts-in": "Commence dans :  {{eta}}",
 	"resource.status.unknown": "Aucun statut n'est encore disponible pour cette file d'attente de traitement de compte",
 	"resource.status-help.failed": "Les fichiers ne parviennent pas à être traités",
