[sc-8469] support the new processing status endpoint (#1275)
* Fix upload bar position

* Support new processing-status endpoint

* Fix translations

--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -745,15 +745,18 @@
 	"resource.select-all-failures": "Sélectionnez toutes les {{count}} ressources en erreur",
 	"resource.selected_count": "{{num}} fichiers sélectionnés",
 	"resource.shared_queue": "La file d'attente de traitement est partagée entre les comptes d'essai.",
-	"resource.status": "Statut",
+	"resource.status.column-title": "Statut",
+	"resource.status.deleted": "Supprimée",
+	"resource.status.error": "Erreur lors du traitement",
+	"resource.status.loading": "Statut de chargement…",
+	"resource.status.next": "Sera traitée ensuite",
+	"resource.status.pending": "Sera traitée après {{count}}  ressources",
+	"resource.status.processed": "Traitement terminé",
+	"resource.status.processing": "Traitement en cours",
+	"resource.status.rank": "Rang : {{rank}}",
+	"resource.status.starts-in": "Commence dans :  {{eta}}",
+	"resource.status.unknown": "Aucun statut n'est encore disponible pour cette file d'attente de traitement de compte",
 	"resource.status-help.failed": "Les fichiers ne parviennent pas à être traités",
-	"resource.status_error": "Erreur lors du traitement",
-	"resource.status_loading": "Statut de chargement…",
-	"resource.status_next": "Sera traité ensuite",
-	"resource.status_pending": "Sera traité après {{count}}  ressources",
-	"resource.status_processed": "Traitement terminé",
-	"resource.status_processing": "Traitement en cours",
-	"resource.status_unknown": "Aucun statut n'est encore disponible pour cette file d'attente de traitement de compte",
 	"resource.summary": "Résumé",
 	"resource.text": "Texte",
 	"resource.thumbnail.delete": "Supprimer la vignette",
