--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -514,6 +514,8 @@
 	"kb.settings.user_prompts.prompt_help": "Defines the way we want the system to act when we ask a question. Here we can define more specific rules, that could even override the defined behavior. For example, we could have a prompt that makes the system only give results in lists, or even ask to answer in a given language.",
 	"kb.settings.user_prompts.system": "Custom behavior",
 	"kb.settings.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
+	"kb.users.already-exists": "A user with email <strong>{{email}}</strong> already exists in this knowledge Box",
+	"kb.users.pending-invitation": "Pending invitation: expires on {{date}}",
 	"label-set.add": "Add label set",
 	"label-set.add-button": "Add new",
 	"label-set.delete.confirm-description": "Deleting the label set will also delete all its labels. You cannot undo this action. It might also affect ongoing trainings and generated suggestions.",
