--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -515,7 +515,7 @@
 	"kb.settings.user_prompts.system": "Comportement personnalisé",
 	"kb.settings.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
 	"kb.users.already-exists": "Un utilisateur avec l'adresse e-mail <strong>{{email}}</strong> existe déjà dans cette Knowledge Box",
-	"kb.users.pending-invitation": "En attente d'invitation: expire le {{date}}",
+	"kb.users.pending-invitation": "En attente d'acceptation: expire le {{date}}",
 	"label-set.add": "Ajouter un jeu d'étiquettes",
 	"label-set.add-button": "Ajouter nouveau",
 	"label-set.delete.confirm-description": "La suppression du jeu d'étiquettes supprimera également toutes ses étiquettes. Vous ne pouvez pas annuler cette action. Cela peut également affecter les formations en cours et les suggestions générées.",
