[sc-8450] Resource metadata preview

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -691,6 +691,8 @@
 	"resource.entities.work_of_art": "Obres",
 	"resource.error.loading-failed": "No s'han pogut carregar els recursos.",
 	"resource.error.no-field": "No hi ha cap camp en aquest recurs",
+	"resource.extra-metadata.edit-toggle": "Editeu metadades addicionals",
+	"resource.extra-metadata.fullscreen": "Pantalla completa",
 	"resource.extra-metadata.invalid-json": "JSON no vàlid",
 	"resource.extra-metadata.label": "Metadades addicionals",
 	"resource.field.add": "Afegeix a",
@@ -732,7 +734,9 @@
 	"resource.origin.url": "URL",
 	"resource.popover.error-resources": "Fitxers que no s'han pogut processar",
 	"resource.popover.pending-resources": "Recurs pendents de processar",
+	"resource.preview.general": "General",
 	"resource.preview.open-viewer": "Visor obert",
+	"resource.preview.origin": "Origen",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Recurs",
 	"resource.reindex-all-info": "S'ha iniciat el reprocessament de tots els recursos per error. Això pot trigar una mica.",
@@ -761,7 +765,7 @@
 	"resource.thumbnail.delete": "Suprimeix la miniatura",
 	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
 	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
-	"resource.thumbnail.label": "Miniatura",
+	"resource.thumbnail.label": "Miniatura(s)",
 	"resource.title": "Títol del recurs",
 	"resource.tooltip.add-field": "Afegeix un camp",
 	"resource.tooltip.annotation": "Anoteu amb NER",
