--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -692,6 +692,8 @@
 	"resource.entities.work_of_art": "Art",
 	"resource.error.loading-failed": "Loading resources failed.",
 	"resource.error.no-field": "There is no field in this resource",
+	"resource.extra-metadata.edit-toggle": "Edit extra metadata",
+	"resource.extra-metadata.fullscreen": "Full screen",
 	"resource.extra-metadata.invalid-json": "Invalid JSON",
 	"resource.extra-metadata.label": "Extra metadata",
 	"resource.field.add": "Add a",
@@ -733,7 +735,9 @@
 	"resource.origin.url": "URL",
 	"resource.popover.error-resources": "Files that have failed to process",
 	"resource.popover.pending-resources": "Files pending to be processed",
+	"resource.preview.general": "General",
 	"resource.preview.open-viewer": "Open viewer",
+	"resource.preview.origin": "Origin",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Resource",
 	"resource.reindex-all-info": "Reprocessing all resources in error started. This may take some time.",
@@ -762,7 +766,7 @@
 	"resource.thumbnail.delete": "Delete thumbnail",
 	"resource.thumbnail.drop": "Drop image or click here",
 	"resource.thumbnail.help": "Upload an image or pick from suggestions",
-	"resource.thumbnail.label": "Thumbnail",
+	"resource.thumbnail.label": "Thumbnail(s)",
 	"resource.title": "Resource title",
 	"resource.tooltip.add-field": "Add field",
 	"resource.tooltip.annotation": "Annotate with NER",
