--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -691,6 +691,8 @@
 	"resource.entities.work_of_art": "Obras",
 	"resource.error.loading-failed": "Error al cargar recursos.",
 	"resource.error.no-field": "No hay ningún campo en este recurso.",
+	"resource.extra-metadata.edit-toggle": "Editar metadatos adicionales",
+	"resource.extra-metadata.fullscreen": "Pantalla Completa",
 	"resource.extra-metadata.invalid-json": "JSON inválido",
 	"resource.extra-metadata.label": "Metadatos adicionales",
 	"resource.field.add": "Agrega un",
@@ -732,7 +734,9 @@
 	"resource.origin.url": "URL",
 	"resource.popover.error-resources": "Archivos que no se han podido procesar",
 	"resource.popover.pending-resources": "Archivos pendientes de procesar",
+	"resource.preview.general": "General",
 	"resource.preview.open-viewer": "Visor abierto",
+	"resource.preview.origin": "Origen",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Recurso",
 	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos por error. Esto puede tomar algo de tiempo.",
@@ -761,7 +765,7 @@
 	"resource.thumbnail.delete": "Eliminar miniatura",
 	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
 	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
-	"resource.thumbnail.label": "Miniatura",
+	"resource.thumbnail.label": "Miniatura(s)",
 	"resource.title": "Título del recurso",
 	"resource.tooltip.add-field": "Agregar un campo",
 	"resource.tooltip.annotation": "Anotar con NER",
