[sc-8450] Resource metadata preview (#1278)
* [sc-8450] Resource metadata preview

* Fix prod build

--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -694,6 +694,8 @@
 	"resource.entities.work_of_art": "Art",
 	"resource.error.loading-failed": "Le chargement des ressources a échoué.",
 	"resource.error.no-field": "Il n'y a aucun champ dans cette ressource",
+	"resource.extra-metadata.edit-toggle": "Modifier des métadonnées supplémentaires",
+	"resource.extra-metadata.fullscreen": "Plein écran",
 	"resource.extra-metadata.invalid-json": "JSON invalide",
 	"resource.extra-metadata.label": "Métadonnées supplémentaires",
 	"resource.field.add": "Ajouter un",
@@ -735,7 +737,9 @@
 	"resource.origin.url": "URL",
 	"resource.popover.error-resources": "Fichiers dont le traitement a échoué",
 	"resource.popover.pending-resources": "Ressources en attente de traitement",
+	"resource.preview.general": "Général",
 	"resource.preview.open-viewer": "Ouvrir la visionneuse",
+	"resource.preview.origin": "Origine",
 	"resource.processed_resources": "Ressources traitées",
 	"resource.profile": "Ressource",
 	"resource.reindex-all-info": "Le retraitement de toutes les ressources erronées a commencé. Cela peut prendre un certain temps.",
@@ -764,7 +768,7 @@
 	"resource.thumbnail.delete": "Supprimer la vignette",
 	"resource.thumbnail.drop": "Déposez l'image ou cliquez ici",
 	"resource.thumbnail.help": "Téléchargez une image ou choisissez parmi les suggestions",
-	"resource.thumbnail.label": "Vignette",
+	"resource.thumbnail.label": "Vignette(s)",
 	"resource.title": "Titre de la ressource",
 	"resource.tooltip.add-field": "Ajouter un champ",
 	"resource.tooltip.annotation": "Annoter avec NER",
