[sc-8285] Allow to modify security groups when editing a resource
- Add security in resource model and ResourceProperties
- Update resource editing page:
  - add expanders to make the page more readable
  - add a security section allowing to update `access_groups` property
  - make the summary textarea field resizable and update the expander size when resizing the summary
- Add security section to resource preview

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -694,7 +694,7 @@
 	"resource.entities.work_of_art": "Art",
 	"resource.error.loading-failed": "Loading resources failed.",
 	"resource.error.no-field": "There is no field in this resource",
-	"resource.extra-metadata.edit-toggle": "Edit extra metadata",
+	"resource.extra-metadata.edit-toggle": "Edit",
 	"resource.extra-metadata.fullscreen": "Full screen",
 	"resource.extra-metadata.invalid-json": "Invalid JSON",
 	"resource.extra-metadata.label": "Extra metadata",
@@ -748,6 +748,9 @@
 	"resource.save-successful": "Resource saved",
 	"resource.search.in-resource": "in resource",
 	"resource.search.in-title": "in title",
+	"resource.security.access-groups.help": "List of group ids that can access the resource, one id per line.",
+	"resource.security.access-groups.label": "Access groups",
+	"resource.security.label": "Security",
 	"resource.select-all-failures": "Select all {{count}} resources in error",
 	"resource.selected_count": "{{num}} files selected",
 	"resource.shared_queue": "The processing queue is shared among trial accounts.",
