--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -693,7 +693,7 @@
 	"resource.entities.work_of_art": "Obras",
 	"resource.error.loading-failed": "Error al cargar recursos.",
 	"resource.error.no-field": "No hay ningún campo en este recurso.",
-	"resource.extra-metadata.edit-toggle": "Editar metadatos adicionales",
+	"resource.extra-metadata.edit-toggle": "Editar",
 	"resource.extra-metadata.fullscreen": "Pantalla Completa",
 	"resource.extra-metadata.invalid-json": "JSON inválido",
 	"resource.extra-metadata.label": "Metadatos adicionales",
@@ -747,6 +747,9 @@
 	"resource.save-successful": "Recurso guardado",
 	"resource.search.in-resource": "en recurso",
 	"resource.search.in-title": "en el titulo",
+	"resource.security.access-groups.help": "Lista de identificadores de grupo que pueden acceder al recurso, un identificador por línea.",
+	"resource.security.access-groups.label": "Grupos de acceso",
+	"resource.security.label": "Seguridad",
 	"resource.select-all-failures": "Seleccionar todos los {{count}} recursos por error",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
 	"resource.shared_queue": "La cola de procesamiento es compartida entre las cuentas de prueba.",
