--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -693,7 +693,7 @@
 	"resource.entities.work_of_art": "Obres",
 	"resource.error.loading-failed": "No s'han pogut carregar els recursos.",
 	"resource.error.no-field": "No hi ha cap camp en aquest recurs",
-	"resource.extra-metadata.edit-toggle": "Editeu metadades addicionals",
+	"resource.extra-metadata.edit-toggle": "Edita",
 	"resource.extra-metadata.fullscreen": "Pantalla completa",
 	"resource.extra-metadata.invalid-json": "JSON no vàlid",
 	"resource.extra-metadata.label": "Metadades addicionals",
@@ -747,6 +747,9 @@
 	"resource.save-successful": "S'ha guardat el recurs",
 	"resource.search.in-resource": "en recurs",
 	"resource.search.in-title": "al títol",
+	"resource.security.access-groups.help": "Llista d'identificadors de grup que poden accedir al recurs, un identificador per línia.",
+	"resource.security.access-groups.label": "Accés als grups",
+	"resource.security.label": "Seguretat",
 	"resource.select-all-failures": "Seleccioneu tots els {{count}} recursos per error",
 	"resource.selected_count": "{{num}} arxius seleccionats",
 	"resource.shared_queue": "La cua de processament és compartida entre els comptes de prova.",
