--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -694,7 +694,7 @@
 	"resource.entities.work_of_art": "Art",
 	"resource.error.loading-failed": "Le chargement des ressources a échoué.",
 	"resource.error.no-field": "Il n'y a aucun champ dans cette ressource",
-	"resource.extra-metadata.edit-toggle": "Modifier des métadonnées supplémentaires",
+	"resource.extra-metadata.edit-toggle": "Modifier",
 	"resource.extra-metadata.fullscreen": "Plein écran",
 	"resource.extra-metadata.invalid-json": "JSON invalide",
 	"resource.extra-metadata.label": "Métadonnées supplémentaires",
@@ -748,6 +748,9 @@
 	"resource.save-successful": "Ressource économisée",
 	"resource.search.in-resource": "en ressource",
 	"resource.search.in-title": "dans le titre",
+	"resource.security.access-groups.help": "Liste des identifiants de groupe pouvant accéder à la ressource, un identifiant par ligne.",
+	"resource.security.access-groups.label": "Groupes d'accès",
+	"resource.security.label": "Sécurité",
 	"resource.select-all-failures": "Sélectionnez toutes les {{count}} ressources en erreur",
 	"resource.selected_count": "{{num}} fichiers sélectionnés",
 	"resource.shared_queue": "La file d'attente de traitement est partagée entre les comptes d'essai.",
