--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -247,6 +247,7 @@
 	"billing.unsubscribe-error": "Erreur lors de l'annulation de l'abonnement",
 	"billing.unsubscribe-help": "N’oubliez pas: même si vous arrêtez de renouveler votre abonnement, il vous reste encore du temps pour utiliser Nuclia.",
 	"billing.unsubscribe-title": "Ce n'est pas fini tant que ce n'est pas vraiment fini...",
+	"billing.update_payment_method": "Mettre à jour le mode de paiement",
 	"billing.upgrade": "Améliorer",
 	"billing.upgrade_now": "Mettre à jour maintenant",
 	"billing.usage.consumables": "Consommables",
