--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -996,6 +996,15 @@
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Sembla que no utilitzeu cap variable en aquest indicador de l'usuari, pot produir respostes inconsistents. Comproveu els exemples d'indicacions de l'usuari a la pàgina de configuració.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "Tindrà prioritat a el prompt de l'usuari definida a la configuració del Knowledge Box. Nota: l'estratègia del prompt pot canviar en funció del model generatiu. Comproveu els exemples a la pàgina de configuració.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt de l'usuari",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.help": "Passa tot el recurs com a context quan es generen respostes (en lloc de només els paràgrafs recuperats per la consulta de cerca)",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.label": "Passeu tot el recurs com a context",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.format-help": "Els identificadors de camp han de tenir el format {field_type}/{field_name}, com ara \"a/title\", \"a/summary\" per als camps de títol i resum o \"t/amend\" per a un camp de text anomenat \"esmena\".",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.help": "Identificadors de camp separats per comes",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.label": "Identificadors de camp",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.placeholder": "Exemple: a/title, a/summary",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.help": "Passa camps específics (designats pels seus identificadors) juntament amb els paràgrafs recuperats per la consulta de cerca",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.label": "Passeu camps específics com a context",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.title": "Estratègies RAG",
 	"widget.generator.advanced.generative-answer-category.title": "Respostes generatives",
 	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Quan feu servir Nuclia per cercar pàgines web, fer clic a un resultat obrirà l'arxiu original en lloc de mostrar-lo al visor.",
 	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navega cap als arxius",
