--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -997,6 +997,15 @@
 	"widget.generator.advanced.generative-answer-category.prompt.error": "It seems you are not using any variable in this user prompt, it might produce inconsistent answers. Please check the user prompt examples in the settings page.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "It will take precedence on the user prompt defined in the Knowledge Box settings. Note: the prompt strategy might change depending on the generative model. Check the examples in the settings page.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "User prompt",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.help": "Passes entire resource as context when generating answers (instead of just the paragraphs retrieved by the search query)",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.label": "Pass entire resource as context",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.format-help": "The field ids have to be in the format {field_type}/{field_name}, like 'a/title', 'a/summary' for title and summary fields or 't/amend' for a text field named 'amend'.",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.help": "Comma-separated field ids",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.label": "Field ids",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.placeholder": "Example: a/title, a/summary",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.help": "Passes specific fields (designated by their ids) along with the paragraphs retrieved by the search query",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.label": "Pass specific field(s) as context",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.title": "RAG strategies",
 	"widget.generator.advanced.generative-answer-category.title": "Generative answers",
 	"widget.generator.advanced.navigation-category.navigate-to-file.help": "When using Nuclia to search web pages, clicking on a result will open the original file rather than rendering it in the viewer",
 	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navigate to files",
