--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -996,6 +996,15 @@
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Parece que no está utilizando ninguna variable en este mensaje de usuario, podría producir respuestas inconsistentes. Consulte los ejemplos de mensajes de usuario en la página de configuración.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "Tendrá prioridad en el prompt de usuario definido en la configuración del Knowledge Box. Nota: la estrategia de prompt puede cambiar según el modelo generativo. Consulte los ejemplos en la página de configuración.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt de usuario",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.help": "Pasa el recurso completo como contexto al generar respuestas (en lugar de solo los párrafos recuperados por la consulta de búsqueda)",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.label": "Pasar el recurso completo como contexto",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.format-help": "Los identificadores de campo deben tener el formato {field_type}/{field_name}, como 'a/title', 'a/summary' para los campos de título y resumen o 't/amend' para un campo de texto llamado \"amend\".",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.help": "ID de campo separados por comas",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.label": "Identificadores de campo",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.placeholder": "Ejemplo: a/title, a/summary",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.help": "Pasa campos específicos (designados por sus identificadores) junto con los párrafos recuperados por la consulta de búsqueda.",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.label": "Pasar campos específicos como contexto",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.title": "Estrategias de GAR",
 	"widget.generator.advanced.generative-answer-category.title": "Respuestas generativas",
 	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
 	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navega hacia los archivos",
