--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -997,6 +997,15 @@
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Il semble que vous n'utilisez aucune variable dans cette invite utilisateur, cela pourrait produire des réponses incohérentes. Veuillez vérifier les exemples d'invites utilisateur dans la page des paramètres.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "Il aura priorité sur le prompt utilisateur définie dans les paramètres de la Knowledge Box. Remarque : la stratégie de prompt peut changer en fonction du modèle génératif. Vérifiez les exemples dans la page des paramètres.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt utilisateur",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.help": "Transmet la ressource entière comme contexte lors de la génération de réponses (au lieu des seuls paragraphes récupérés par la requête de recherche)",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.label": "Transmettre la ressource entière comme contexte",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.format-help": "Les identifiants de champ doivent être au format {field_type}/{field_name}, comme 'a/title', 'a/summary' pour les champs de titre et de résumé ou 't/amend' pour un champ de texte nommé 'amend'.",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.help": "Identifiants de champs séparés par des virgules",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.label": "Identifiants des champs",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.placeholder": "Exemple : a/title, a/summary",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.help": "Transmet des champs spécifiques (désignés par leurs identifiants) ainsi que les paragraphes récupérés par la requête de recherche",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.label": "Transmettre des champs spécifiques comme contexte",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.title": "Stratégies RAG",
 	"widget.generator.advanced.generative-answer-category.title": "Réponses génératives",
 	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Lorsque vous utilisez Nuclia pour rechercher des pages Web, cliquer sur un résultat ouvrira le fichier original plutôt que de l'afficher dans la visionneuse.",
 	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Accédez aux fichiers",
