[sc-8660] Add notifications button and panel
  - Add notification button in the top bar
  - Add notification panel in base component
  - Display notification panel with a slide transition from the right
  - In the panel:
     - display the list of notifications or a message when there is no notification.
     - highlight unread notifications
     - delete all button in the footer
  - for processing notifications, resource title is a link to resource preview page and clicking on it automatically close the notification panel
  - mark all the notifications as read when closing the panel
  - group notifications arriving within less than 30s and display up to 10 items in one notification.

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -615,6 +615,13 @@
 	"ner-management.page-title": "Gestió NER",
 	"ner-remove-family-dialog.description": "Si suprimiu una família NER, ja no podreu anotar recursos amb ella. Però les anotacions ja fetes amb entitats d'aquesta família encara seran visibles als vostres recursos.",
 	"ner-remove-family-dialog.title": "Confirmeu que voleu suprimir \"{{familyName}}\"?",
+	"notification.notification-button-label": "Obriu el tauler de notificacions",
+	"notification.panel.delete-all-button": "Eliminar tots",
+	"notification.panel.more": "i {{count}} més...",
+	"notification.panel.no-notifications": "Res de nou pendent",
+	"notification.panel.title": "Notificacions",
+	"notification.type.processing-completed": "Processament completat",
+	"notification.type.processing-failed": "Ha fallat el processament",
 	"pastanaga.calendar.invalid-format": "Format de data no vàlid (format esperat: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mesos",
 	"pastanaga.calendar.years": "Anys",
