--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -616,6 +616,13 @@
 	"ner-management.page-title": "NER management",
 	"ner-remove-family-dialog.description": "If you delete a NER family, you won't be able to annotate resources with it anymore. But annotations already made with entities from this family will still be visible on your resources.",
 	"ner-remove-family-dialog.title": "Are you sure you want to delete \"{{familyName}}\"?",
+	"notification.notification-button-label": "Open notification panel",
+	"notification.panel.delete-all-button": "Delete all",
+	"notification.panel.more": "and {{count}} more…",
+	"notification.panel.no-notifications": "Nothing new pending",
+	"notification.panel.title": "Notifications",
+	"notification.type.processing-completed": "Processing completed",
+	"notification.type.processing-failed": "Processing failed",
 	"pastanaga.calendar.invalid-format": "Invalid date format (expected format: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Months",
 	"pastanaga.calendar.years": "Years",
