--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -615,6 +615,13 @@
 	"ner-management.page-title": "Gestión NER",
 	"ner-remove-family-dialog.description": "Si elimina una familia NER, ya no podrá anotar recursos con ella. Pero las anotaciones ya realizadas con entidades de esta familia seguirán siendo visibles en sus recursos.",
 	"ner-remove-family-dialog.title": "¿Seguro que quieres eliminar \"{{familyName}}\"?",
+	"notification.notification-button-label": "Abrir panel de notificaciones",
+	"notification.panel.delete-all-button": "Eliminar todos",
+	"notification.panel.more": "y {{count}} más ...",
+	"notification.panel.no-notifications": "Nada nuevo pendiente",
+	"notification.panel.title": "Notificaciones",
+	"notification.type.processing-completed": "Procesamiento completado",
+	"notification.type.processing-failed": "Procesamiento fallido",
 	"pastanaga.calendar.invalid-format": "Formato de fecha no válido (formato esperado: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Meses",
 	"pastanaga.calendar.years": "Años",
