--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -616,6 +616,13 @@
 	"ner-management.page-title": "Gestion des NER",
 	"ner-remove-family-dialog.description": "Si vous supprimez une famille NER, vous ne pourrez plus annoter les ressources avec elle. Mais les annotations déjà effectuées avec des entités de cette famille seront toujours visibles sur vos ressources.",
 	"ner-remove-family-dialog.title": "Êtes-vous sûr de vouloir supprimer \"{{familyName}}\" ?",
+	"notification.notification-button-label": "Ouvrir le panneau de notifications",
+	"notification.panel.delete-all-button": "Supprimer tout",
+	"notification.panel.more": "et {{count}} de plus…",
+	"notification.panel.no-notifications": "Rien de nouveau",
+	"notification.panel.title": "Notifications",
+	"notification.type.processing-completed": "Traitement terminé",
+	"notification.type.processing-failed": "Le traitement a échoué",
 	"pastanaga.calendar.invalid-format": "Format de date non valide (format attendu : \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mois",
 	"pastanaga.calendar.years": "Années",
