[sc-8685] Improve translations

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -119,7 +119,7 @@
 	"api-key-management.create-key.button": "Crear una nueva clave API",
 	"api-key-management.create-key.title": "Crear nueva clave API",
 	"api-key-management.description": "¡Importante! Copie y guarde la clave API. Desaparecerá una vez añadido.",
-	"api-key-management.key-roles.manager": "Gerente",
+	"api-key-management.key-roles.manager": "Administrador",
 	"api-key-management.key-roles.reader": "Lector",
 	"api-key-management.key-roles.writer": "Escritor",
 	"api-key-management.title": "Claves de api",
@@ -266,7 +266,7 @@
 	"dashboard-home.desktop.available-for": "Disponible para Windows, Mac y Linux",
 	"dashboard-home.desktop.description": "La forma más fácil y rápida de subir datos a Nuclia desde (casi) cualquier fuente de datos",
 	"dashboard-home.desktop.open": "Abrir Nuclia Desktop",
-	"dashboard-home.go-to.kb-settings": "Ir a la configuración del Cuadro de conocimiento",
+	"dashboard-home.go-to.kb-settings": "Ir a la configuración de la Knowledge Box",
 	"dashboard-home.go-to.pending-list": "Ir a la lista de recursos pendientes de procesar",
 	"dashboard-home.go-to.resource-list": "Ir a la lista de recursos",
 	"dashboard-home.kb-content.latest-resources.no-upload": "Aún no se ha subido ningún recurso",
@@ -489,17 +489,17 @@
 	"kb.settings.learning-options.nuclia-everest-v1": "Nuclia Everest",
 	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
 	"kb.settings.learning-options.summary-extended": "Resumen detallado con listado de puntos destacados y términos relevantes",
-	"kb.settings.learning-options.summary-simple": "Sumario estándar de un par de líneas.",
+	"kb.settings.learning-options.summary-simple": "Resumen estándar de un par de líneas.",
 	"kb.settings.models-section.advanced": "Avanzado",
-	"kb.settings.models-section.title": "Modelos e prompts",
+	"kb.settings.models-section.title": "Modelos y prompts",
 	"kb.settings.pdf_annotation_toggle.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"kb.settings.pdf_annotation_toggle.label": "Anotar por selección",
-	"kb.settings.semantic.help": "El modelo semántico depende de los idiomas que seleccionó al crear este cuadro de conocimiento.",
+	"kb.settings.semantic.help": "El modelo semántico depende de los idiomas que seleccionó al crear esta Knowledge Box",
 	"kb.settings.semantic.label": "Modelo semántico",
 	"kb.settings.status.label": "Knowledge Box estado: <strong>{{state}}</strong>",
 	"kb.settings.status.private": "privado",
 	"kb.settings.status.published": "público",
-	"kb.settings.summary.help": "Especifica el tipo de resumen a petición que debe generarse",
+	"kb.settings.summary.help": "Especifica el tipo de resumen bajo demanda que debe generarse",
 	"kb.settings.summary.label": "Tipo de resumen bajo demanda",
 	"kb.settings.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
 	"kb.settings.summary_model.label": "Resumen bajo demanda",
@@ -768,7 +768,7 @@
 	"resource.status.next": "Será procesado a continuación",
 	"resource.status.pending": "Se procesará después de {{count}} recursos",
 	"resource.status.processed": "Procesamiento completado",
-	"resource.status.processing": "Procesando en progreso",
+	"resource.status.processing": "Procesamiento en progreso",
 	"resource.status.rank": "Rango: {{rank}}",
 	"resource.status.starts-in": "Comienza en: {{eta}}",
 	"resource.status.unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
@@ -1011,7 +1011,7 @@
 	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.placeholder": "Ejemplo: a/title, a/summary",
 	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.help": "Pasa campos específicos (designados por sus identificadores) junto con los párrafos recuperados por la consulta de búsqueda.",
 	"widget.generator.advanced.generative-answer-category.rag-strategies.specific-fields.label": "Pasar campos específicos como contexto",
-	"widget.generator.advanced.generative-answer-category.rag-strategies.title": "Estrategias de GAR",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.title": "Estrategias de RAG",
 	"widget.generator.advanced.generative-answer-category.title": "Respuestas generativas",
 	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Al usar Nuclia para buscar páginas web, hacer clic en un resultado abrirá el archivo original en lugar de mostrarlo en el visor.",
 	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navega hacia los archivos",
