--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -30,7 +30,7 @@
 	"account.delete_account_confirm": "Vull suprimir aquest compte juntament amb totes les Knowledge Boxes existents i les seves dades",
 	"account.delete_account_confirm_title": "Eliminar el compte?",
 	"account.delete_account_warning_1": "Al eliminar aquest compte, s'eliminaran totes les dades existents",
-	"account.delete_account_warning_2": "el compte i qualsevol assignació de dades de configuració, usuaris i rols",
+	"account.delete_account_warning_2": "el compte i qualsevol dada de configuració, usuaris i assignació de rols",
 	"account.delete_account_warning_3": "totes les Knowledge Boxes i les seves dades",
 	"account.delete_account_warning_4": "qualsevol model entrenat de qualsevol Knowledge Box",
 	"account.delete_user": "Vols suprimir l'usuari?",
@@ -47,7 +47,7 @@
 	"account.free_trial_ended.title": "Oh! La teva prova gratuïta ha finalitzat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
-	"account.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar en aquest compte",
+	"account.invited_user": "Hem enviat un correu electrònic a {{user}} invitant-lo a unir-se a aquest compte",
 	"account.kb.add": "Afegir Knowledge Box",
 	"account.kb.count": "{{count}} de {{max}}",
 	"account.kb.edit": "Editar preferències",
@@ -119,7 +119,7 @@
 	"api-key-management.create-key.button": "Creeu una nova clau d'API",
 	"api-key-management.create-key.title": "Crea una clau d'API nova",
 	"api-key-management.description": "Important! Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
-	"api-key-management.key-roles.manager": "Gerent",
+	"api-key-management.key-roles.manager": "Administrador",
 	"api-key-management.key-roles.reader": "Lector",
 	"api-key-management.key-roles.writer": "Escriptor",
 	"api-key-management.title": "Claus API",
@@ -266,7 +266,7 @@
 	"dashboard-home.desktop.available-for": "Disponible per a Windows, Mac i Linux",
 	"dashboard-home.desktop.description": "La manera més fàcil i ràpida de carregar dades a Nuclia des de (gairebé) qualsevol font de dades",
 	"dashboard-home.desktop.open": "Obriu Nuclia Desktop",
-	"dashboard-home.go-to.kb-settings": "Aneu a la configuració del quadre de coneixement",
+	"dashboard-home.go-to.kb-settings": "Aneu a la configuració de la Knowledge Box",
 	"dashboard-home.go-to.pending-list": "Aneu a la llista de recursos pendents de processar",
 	"dashboard-home.go-to.resource-list": "Aneu a la llista de recursos",
 	"dashboard-home.kb-content.latest-resources.no-upload": "Encara no s'ha penjat cap recurs",
@@ -435,16 +435,16 @@
 	"getting-started.intro.step1": "Seleccioneu algun contingut o dades",
 	"getting-started.intro.step2": "Carregueu-lo a Nuclia per processar-lo",
 	"getting-started.intro.step3": "Comenceu a fer una pregunta a Nuclia",
-	"getting-started.intro.three-steps-headline": "Només esteu a tres passos curts per generar respostes a partir de les vostres dades",
+	"getting-started.intro.three-steps-headline": "Només esteu a tres passos de generar respostes a partir de les vostres dades",
 	"getting-started.intro.title": "Comença amb només 3 passos senzills",
-	"getting-started.processing.description": "Depenent del contingut, pot trigar uns minuts a processar les vostres dades a la base de dades vectorials NucliaDB.",
+	"getting-started.processing.description": "Depenent del contingut, pot trigar uns minuts a processar les vostres dades a la base de dades vectorial NucliaDB.",
 	"getting-started.processing.estimated-time": "Temps de processament estimat: {{estimation}}",
 	"getting-started.processing.status.estimated-time": "Queden {{estimation}} min",
-	"getting-started.processing.status.failed": "Fracassat",
+	"getting-started.processing.status.failed": "Ha fallat",
 	"getting-started.processing.status.processed": "Processament completat",
 	"getting-started.processing.status.processing": "Processament",
 	"getting-started.processing.status.queued": "En cua",
-	"getting-started.processing.status.uploading": "S'està penjant",
+	"getting-started.processing.status.uploading": "Carregant",
 	"getting-started.processing.title": "2. Càrrega i processament",
 	"getting-started.search.description": "Feu preguntes sobre les vostres dades, compareu resultats, creeu resums o xateja amb els vostres documents.",
 	"getting-started.search.go-to-search": "Aneu a la pàgina de cerca",
@@ -460,7 +460,7 @@
 	"getting-started.upload.link-textarea.label": "Escriviu o enganxeu els URLs de les pàgines web",
 	"getting-started.upload.title": "1. Carregueu dades",
 	"kb.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
-	"kb.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
+	"kb.create.failure": "Ho sento, definitivament alguna cosa no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"kb.create.in_progress": "Creació de la Knowledge Box en curs...",
 	"kb.create.invalid_name": "El nom de la Knowledge Box no és vàlid",
 	"kb.create.title": "Crea una Knowledge Box",
@@ -756,7 +756,7 @@
 	"resource.search.in-resource": "en recurs",
 	"resource.search.in-title": "al títol",
 	"resource.security.access-groups.help": "Llista d'identificadors de grup que poden accedir al recurs, un identificador per línia.",
-	"resource.security.access-groups.label": "Accés als grups",
+	"resource.security.access-groups.label": "Grups d'accés",
 	"resource.security.label": "Seguretat",
 	"resource.select-all-failures": "Seleccioneu tots els {{count}} recursos per error",
 	"resource.selected_count": "{{num}} arxius seleccionats",
@@ -770,8 +770,8 @@
 	"resource.status.processed": "Processament completat",
 	"resource.status.processing": "Processament en curs",
 	"resource.status.rank": "Rang: {{rank}}",
-	"resource.status.starts-in": "Comença a: {{eta}}",
-	"resource.status.unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
+	"resource.status.starts-in": "Comença en: {{eta}}",
+	"resource.status.unknown": "Encara no hi ha cap estat disponible per a la cua de processament d'aquest compte",
 	"resource.status-help.failed": "Els fitxers no es poden processar",
 	"resource.summary": "Resum",
 	"resource.text": "Text",
@@ -806,12 +806,12 @@
 	"sidenav.account-settings": "Compte",
 	"sidenav.activity": "Registre d'activitat",
 	"sidenav.advanced": "Avançat",
-	"sidenav.api_keys": "Tecles API",
+	"sidenav.api_keys": "Claus API",
 	"sidenav.classification": "Conjunts d'etiquetes",
 	"sidenav.home": "Inici",
 	"sidenav.list": "Llistat recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
-	"sidenav.nua-keys": "Tecles NUA",
+	"sidenav.nua-keys": "Claus NUA",
 	"sidenav.settings": "Preferències",
 	"sidenav.subscription": "Subscripció",
 	"sidenav.sync": "Sincronitzar",
@@ -970,7 +970,7 @@
 	"validation.name_required": "Introdueix el nom i cognoms",
 	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
 	"widget.copilot.add-label-filters": "Afegiu filtres per etiquetes",
-	"widget.copilot.agent": "Definició d'agent",
+	"widget.copilot.agent": "Definició de l'agent",
 	"widget.copilot.agent-placeholder": "Exemple: Guia turística",
 	"widget.copilot.apply": "Aplicar",
 	"widget.copilot.description": "Creeu i definiu el vostre Copilot IA definint un comportament que generarà el prompt de l'usuari.",
@@ -1005,7 +1005,7 @@
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt de l'usuari",
 	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.help": "Passa tot el recurs com a context quan es generen respostes (en lloc de només els paràgrafs recuperats per la consulta de cerca)",
 	"widget.generator.advanced.generative-answer-category.rag-strategies.entire-resource.label": "Passeu tot el recurs com a context",
-	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.format-help": "Els identificadors de camp han de tenir el format {field_type}/{field_name}, com ara \"a/title\", \"a/summary\" per als camps de títol i resum o \"t/amend\" per a un camp de text anomenat \"esmena\".",
+	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.format-help": "Els identificadors de camp han de tenir el format {field_type}/{field_name}, com ara \"a/title\", \"a/summary\" per als camps de títol i resum o \"t/amend\" per a un camp de text anomenat \"amend\".",
 	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.help": "Identificadors de camp separats per comes",
 	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.label": "Identificadors de camp",
 	"widget.generator.advanced.generative-answer-category.rag-strategies.field-ids-input.placeholder": "Exemple: a/title, a/summary",
