[sc-8756] Remove datasets import when creating new account

--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -43,13 +43,9 @@
 	"onboarding.loading": "Loading…",
 	"onboarding.next-button": "Next",
 	"onboarding.setting-up.account_creation": "Account creation…",
-	"onboarding.setting-up.import_dataset": "Importing your sample dataset...",
 	"onboarding.setting-up.kb_creation": "Storage creation…",
-	"onboarding.setting-up-dataset.import-failed": "Dataset import failed, but don't worry you'll be able to import a dataset again in the next step",
-	"onboarding.setting-up-dataset.subtitle": "You'll be ready for your first search in less than a minute!",
-	"onboarding.setting-up-dataset.title": "We’re working some magic behind the scenes...",
-	"onboarding.setting-up-upload.subtitle": "Upload your data in the next step, and once processed, you'll be ready for your first search.",
-	"onboarding.setting-up-upload.title": "Let's get ready to import your data",
+	"onboarding.setting-up.subtitle": "Upload your data in the next step, and once processed, you'll be ready for your first search.",
+	"onboarding.setting-up.title": "Let's get ready to import your data",
 	"onboarding.step1.company": "Company name",
 	"onboarding.step1.invalid_phone_code": "Invalid code",
 	"onboarding.step1.invalid_phone_number": "Invalid phone number",
@@ -93,10 +89,6 @@
 	"onboarding.step2.languages.spanish": "Spanish",
 	"onboarding.step2.languages.swedish": "Swedish",
 	"onboarding.step2.region-label": "Select a region to host your search data",
-	"onboarding.step2.starting-data.dataset": "Use a sample data set",
-	"onboarding.step2.starting-data.dataset-label": "Select sample dataset",
-	"onboarding.step2.starting-data.label": "How do you want to start?",
-	"onboarding.step2.starting-data.upload": "Upload my own data",
 	"onboarding.step2.subtitle": "Set these parameters to customize your account",
 	"onboarding.step2.title": "Let's get you set up",
 	"recover.description": "Lost your password? Let’s fix that. Just enter the email address you registered with, and we’ll start the recovery procedure.",
