--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -43,13 +43,9 @@
 	"onboarding.loading": "Cargando…",
 	"onboarding.next-button": "Siguiente",
 	"onboarding.setting-up.account_creation": "Creación de cuenta…",
-	"onboarding.setting-up.import_dataset": "Importando su conjunto de datos...",
 	"onboarding.setting-up.kb_creation": "Creación de almacenamiento…",
-	"onboarding.setting-up-dataset.import-failed": "La importación del conjunto de datos falló, pero no se preocupe, podrá volver a importar un conjunto de datos en el siguiente paso.",
-	"onboarding.setting-up-dataset.subtitle": "¡Estarás listo para tu primera búsqueda en menos de un minuto!",
-	"onboarding.setting-up-dataset.title": "Estamos configurando tu cuenta",
-	"onboarding.setting-up-upload.subtitle": "Cargue sus datos en el siguiente paso y, una vez procesados, estará listo para su primera búsqueda.",
-	"onboarding.setting-up-upload.title": "Preparémonos para importar tus datos.",
+	"onboarding.setting-up.subtitle": "Cargue sus datos en el siguiente paso y, una vez procesados, estará listo para su primera búsqueda.",
+	"onboarding.setting-up.title": "Preparémonos para importar tus datos.",
 	"onboarding.step1.company": "Nombre de empresa",
 	"onboarding.step1.invalid_phone_code": "Codigo invalido",
 	"onboarding.step1.invalid_phone_number": "Numero de telefono invalido",
@@ -93,10 +89,6 @@
 	"onboarding.step2.languages.spanish": "Español",
 	"onboarding.step2.languages.swedish": "Sueco",
 	"onboarding.step2.region-label": "Seleccione una región para alojar sus datos de búsqueda",
-	"onboarding.step2.starting-data.dataset": "Utilice un conjunto de datos de muestra",
-	"onboarding.step2.starting-data.dataset-label": "Seleccionar conjunto de datos de muestra",
-	"onboarding.step2.starting-data.label": "¿Cómo quieres empezar?",
-	"onboarding.step2.starting-data.upload": "Subir mis propios datos",
 	"onboarding.step2.subtitle": "Establezca estos parámetros para personalizar su cuenta",
 	"onboarding.step2.title": "Vamos a configurarlo",
 	"recover.description": "Escribe tu dirección de correo electrónico y sigue las indicaciones para recuperar la contraseña",
