--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -43,13 +43,9 @@
 	"onboarding.loading": "Chargement…",
 	"onboarding.next-button": "Suivant",
 	"onboarding.setting-up.account_creation": "Création du compte...",
-	"onboarding.setting-up.import_dataset": "Import de votre jeu de données...",
 	"onboarding.setting-up.kb_creation": "Création du stockage…",
-	"onboarding.setting-up-dataset.import-failed": "L'import du jeu de données a échoué, mais ne vous inquiétez pas, vous pourrez réimporter un jeu de données à l'étape suivante.",
-	"onboarding.setting-up-dataset.subtitle": "Vous serez prêt pour votre première recherche en moins d’une minute !",
-	"onboarding.setting-up-dataset.title": "Et maintenant, laissons la magie agir…",
-	"onboarding.setting-up-upload.subtitle": "Téléchargez vos données à l'étape suivante et une fois traitées, vous serez prêt pour votre première recherche.",
-	"onboarding.setting-up-upload.title": "Nous nous préparons à importer vos données",
+	"onboarding.setting-up.subtitle": "Téléchargez vos données à l'étape suivante et une fois traitées, vous serez prêt pour votre première recherche.",
+	"onboarding.setting-up.title": "Nous nous préparons à importer vos données",
 	"onboarding.step1.company": "Nom de l'entreprise",
 	"onboarding.step1.invalid_phone_code": "Code invalide",
 	"onboarding.step1.invalid_phone_number": "Numéro de téléphone invalide",
@@ -93,10 +89,6 @@
 	"onboarding.step2.languages.spanish": "Espagnol",
 	"onboarding.step2.languages.swedish": "Suédois",
 	"onboarding.step2.region-label": "Sélectionnez une région pour héberger vos données de recherche",
-	"onboarding.step2.starting-data.dataset": "Utiliser un jeu de données d'exemple",
-	"onboarding.step2.starting-data.dataset-label": "Sélectionner jeu de données",
-	"onboarding.step2.starting-data.label": "Comment voulez-vous commencer ?",
-	"onboarding.step2.starting-data.upload": "Télécharger mes propres données",
 	"onboarding.step2.subtitle": "Définissez ces paramètres pour personnaliser votre compte",
 	"onboarding.step2.title": "Laissez-nous vous installer",
 	"recover.description": "Vous avez perdu votre mot de passe ? Nous allons y remédier. Saisissez l'adresse électronique avec laquelle vous vous êtes enregistré et nous lancerons la procédure de récupération.",
