--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -43,13 +43,9 @@
 	"onboarding.loading": "S'està carregant…",
 	"onboarding.next-button": "Pròxim",
 	"onboarding.setting-up.account_creation": "Creació del compte...",
-	"onboarding.setting-up.import_dataset": "S'està important el vostre conjunt de dades...",
 	"onboarding.setting-up.kb_creation": "Creació d'emmagatzematge...",
-	"onboarding.setting-up-dataset.import-failed": "La importació del conjunt de dades ha fallat, però no us preocupeu, podreu tornar a importar un conjunt de dades al pas següent",
-	"onboarding.setting-up-dataset.subtitle": "Estaràs preparat per a la teva primera cerca en menys d'un minut!",
-	"onboarding.setting-up-dataset.title": "Estem configurant el teu compte",
-	"onboarding.setting-up-upload.subtitle": "Carregueu les vostres dades al següent pas i, un cop processades, estaràs preparat per a la teva primera cerca.",
-	"onboarding.setting-up-upload.title": "Preparem-nos per importar les vostres dades",
+	"onboarding.setting-up.subtitle": "Carregueu les vostres dades al següent pas i, un cop processades, estaràs preparat per a la teva primera cerca.",
+	"onboarding.setting-up.title": "Preparem-nos per importar les vostres dades",
 	"onboarding.step1.company": "Nom de la companyia",
 	"onboarding.step1.invalid_phone_code": "Codi invàlid",
 	"onboarding.step1.invalid_phone_number": "Número de telèfon no vàlid",
@@ -93,10 +89,6 @@
 	"onboarding.step2.languages.spanish": "Espanyol",
 	"onboarding.step2.languages.swedish": "Suec",
 	"onboarding.step2.region-label": "Seleccioneu una regió per allotjar les vostres dades de cerca",
-	"onboarding.step2.starting-data.dataset": "Utilitzeu un conjunt de dades de mostra",
-	"onboarding.step2.starting-data.dataset-label": "Seleccioneu el conjunt de dades de mostra",
-	"onboarding.step2.starting-data.label": "Com vols començar?",
-	"onboarding.step2.starting-data.upload": "Pujar les meves pròpies dades",
 	"onboarding.step2.subtitle": "Establiu aquests paràmetres per personalitzar el vostre compte",
 	"onboarding.step2.title": "Anem a configurar-te",
 	"recover.description": "Escriu la teva direcció electrònica i segueix les indicacions per a recuperar la contrasenya ",
