[sc-8765] Update Notification panel
- Use the new `listenToResourceOperationNotifications` method to get better notifications
- Stop listening to current KB notifications when switching to another KB, and remove the previous notifications from the panel
- Fix the error management in rest’s `getStreamMessages` method: firefox is raising `NS_BINDING_ABORTED` TypeError when reloading the page while the connection is opened, so our system allowing to reconnect once in case of network error was reconnecting while it shouldn't have on this specific case.

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -620,8 +620,12 @@
 	"notification.panel.more": "i {{count}} més...",
 	"notification.panel.no-notifications": "Res de nou pendent",
 	"notification.panel.title": "Notificacions",
-	"notification.type.processing-completed": "Processament completat",
-	"notification.type.processing-failed": "Ha fallat el processament",
+	"notification.type.creation-completed": "Creació de recurs completada",
+	"notification.type.creation-failed": "Creació de recurs fallida",
+	"notification.type.deletion-completed": "Supressió de recurs completada",
+	"notification.type.deletion-failed": "Supressió de recurs fallida",
+	"notification.type.modification-completed": "Edició del recurs completada",
+	"notification.type.modification-failed": "Edició del recurs fallida",
 	"pastanaga.calendar.invalid-format": "Format de data no vàlid (format esperat: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mesos",
 	"pastanaga.calendar.years": "Anys",
