--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -621,8 +621,12 @@
 	"notification.panel.more": "and {{count}} more…",
 	"notification.panel.no-notifications": "Nothing new pending",
 	"notification.panel.title": "Notifications",
-	"notification.type.processing-completed": "Processing completed",
-	"notification.type.processing-failed": "Processing failed",
+	"notification.type.creation-completed": "Resource creation completed",
+	"notification.type.creation-failed": "Resource creation failed",
+	"notification.type.deletion-completed": "Resource deletion completed",
+	"notification.type.deletion-failed": "Resource deletion failed",
+	"notification.type.modification-completed": "Resource edition completed",
+	"notification.type.modification-failed": "Resource edition failed",
 	"pastanaga.calendar.invalid-format": "Invalid date format (expected format: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Months",
 	"pastanaga.calendar.years": "Years",
