--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -621,8 +621,12 @@
 	"notification.panel.more": "et {{count}} de plus…",
 	"notification.panel.no-notifications": "Rien de nouveau",
 	"notification.panel.title": "Notifications",
-	"notification.type.processing-completed": "Traitement terminé",
-	"notification.type.processing-failed": "Le traitement a échoué",
+	"notification.type.creation-completed": "Création de la ressource terminée",
+	"notification.type.creation-failed": "Échec de la création de ressource",
+	"notification.type.deletion-completed": "Suppression des ressources terminée",
+	"notification.type.deletion-failed": "Échec de la suppression de ressource",
+	"notification.type.modification-completed": "Édition de la ressource terminée",
+	"notification.type.modification-failed": "Échec de l'édition de la ressource",
 	"pastanaga.calendar.invalid-format": "Format de date non valide (format attendu : \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mois",
 	"pastanaga.calendar.years": "Années",
